--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body{
 }
 .body-wrapper{
   padding : 10px 10%;
+  /* background-color: red; */
 }
 .icon-style{
   width : 10px;
@@ -117,4 +118,78 @@ body{
 }
 .card-price{
   color : green;
+}
+/* End of card design */
+/* Start of modal design */
+.modal-wrapper{
+  background-color: black;
+  position: fixed;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+  opacity: 0.6;
+}
+.modal-container{
+  background-color: black;
+  position: fixed;
+  top: 10%;
+  bottom: 10%;
+  right: 25%;
+  left: 25%;
+  border-radius: 20px;
+  padding : 30px;
+}
+.cancel-modal-container{
+  display: inline-flex;
+  justify-content: right;
+  width: 100%;
+}
+.cancel-modal-container > span{
+  cursor: pointer;
+}
+.modal-content-container{
+  /* background-color: yellow; */
+  height: 90%;
+  width: 100%;
+  margin: 10px;
+  display: inline-flex;
+}
+.nft-modal-image{
+  /* background-color: green; */
+  padding: 20px;
+}
+.nft-modal-image > img{
+  height: 80%;
+  width: 90%;
+}
+.nft-modal-info{
+  padding: 20px 0%;
+}
+.nft-modal-info > p{
+  margin: 15px 0%;
+  font-size: 1.5rem;
+}
+.nft-modal-info > p > a{
+  color : #E903C4;
+  font-weight: bolder;
+  text-decoration: none;
+}
+.nft-modal-info > p > a:hover{
+  color: white;
+}
+.nft-modal-info > p > button{
+  padding : 10px;
+  font-weight: bolder;
+  background-color: green;
+  color : white;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+}
+.nft-modal-info > p > button:hover{
+  background-color: transparent;
+  color: #E903C4;
+  border: solid 2px #E903C4;
 }
